--- a/frontend/tips/49-performance-testing/main.mdx
+++ b/frontend/tips/49-performance-testing/main.mdx
@@ -22,10 +22,38 @@ category: 'fundamentals'
 
 ## Intro
 
-Odds are pretty good that your production application has some kind of performance monitoring in place (e.g., New Relic). This goes a long way towards identifying when something detrimental has been released into the wild.
+Odds are pretty good that your production application has some kind of performance monitoring in place (e.g., New
+Relic). This goes a long way towards identifying when something detrimental has been released into the wild.
 
 But how do you catch performance issues before they reach production?
 
-import DropdownMarkdown from '../../src/components/dropdownMarkdown';
+## A Solution
 
-<DropdownMarkdown folderName='49-performance-testing' />
+By repurposing a Selenium script, we can run it through a proxy server and capture the HTTP traffic. With this
+traffic, we can run some simple checks to see if the application's performance has degraded.
+
+Let's dig in with an example.
+
+
+
+import DisplayTips from "../../src/components/displayTips";
+const contentLanguages = [
+    { label: 'Ruby', value: 'ruby' },
+];
+
+<DisplayTips contentPath={"49-performance-testing"} languages={contentLanguages} />
+
+
+## About The Author
+
+Dave Haeffner is the original writer of Elemental Selenium -- a free, once weekly Selenium tip newsletter that's read
+by thousands of testing professionals. He also created and maintains the-internet (an open-source web app that's
+perfect for writing automated tests against).
+
+Dave has helped numerous companies successfully implement automated acceptance testing; including The Motley Fool,
+ManTech International, Sittercity, and Animoto. He is also an active member of the Selenium project and has spoken
+at numerous conferences and meetups around the world about automated acceptance testing.
+
+![Dave Haeffner profile picture](/img/authors/dave-haeffner.jpeg#author-img 'a title')
+
+
