--- a/frontend/tips/50-how-to-work-with-hovers/main.mdx
+++ b/frontend/tips/50-how-to-work-with-hovers/main.mdx
@@ -22,8 +22,39 @@ category:
 
 ## Intro
 
-If you need to work with mouse hovers in your tests, it might not be obvious how to do this with Selenium. A quick search through the official Selenium documentation can also be confusing, and might leave you scouring online forums and search engines for the solution.
+If you need to work with mouse hovers in your tests, it might not be obvious how to do this with Selenium. A quick
+search through the official Selenium documentation can also be confusing, and might leave you scouring online forums
+and search engines for the solution.
 
-import DropdownMarkdown from '../../src/components/dropdownMarkdown';
+## A Solution
 
-<DropdownMarkdown folderName='50-how-to-work-with-hovers' />
+The most popular use case for a hover action is to display additional menu options(submenu.)
+
+By leveraging Selenium's [Action Builder](http://seleniumhq.github.io/selenium/docs/api/dotnet/html/T_OpenQA_Selenium_Interactions_Actions.htm) we can handle more complex user interactions like hovers. This is
+done by telling Selenium which element we want to move the mouse to, and then performing what we need to after.
+
+
+import DisplayTips from "../../src/components/displayTips";
+const contentLanguages = [
+    { label: 'Python', value: 'python' },
+    { label: 'C#', value: 'csharp' },
+    { label: 'Java', value: 'java' },
+    { label: 'JavaScript', value: 'javascript' },
+    { label: 'Ruby', value: 'ruby' },
+];
+
+<DisplayTips contentPath={"50-how-to-work-with-hovers"} languages={contentLanguages} />
+
+
+## About The Author
+
+Dave Haeffner is the original writer of Elemental Selenium -- a free, once weekly Selenium tip newsletter that's read
+by thousands of testing professionals. He also created and maintains the-internet (an open-source web app that's
+perfect for writing automated tests against).
+
+Dave has helped numerous companies successfully implement automated acceptance testing; including The Motley Fool,
+ManTech International, Sittercity, and Animoto. He is also an active member of the Selenium project and has spoken
+at numerous conferences and meetups around the world about automated acceptance testing.
+
+![Dave Haeffner profile picture](/img/authors/dave-haeffner.jpeg#author-img 'a title')
+
