Switching tip 51 to use tabs

--- a/frontend/tips/51-how-to-work-with-javascript-alerts/main.mdx
+++ b/frontend/tips/51-how-to-work-with-javascript-alerts/main.mdx
@@ -24,12 +24,41 @@ category:
 
 ## Intro
 
-Built into Selenium is the ability to switch to an alert window and either accept or dismiss it. This way your tests can continue unencumbered by dialog boxes.
+Built into Selenium is the ability to switch to an alert window and either accept or dismiss it. This way your tests
+can continue unencumbered by dialog boxes.
 
 A popular use case for alerts is in the case of error prevention for password restrictions.
 
-If your application triggers any JavaScript pop-ups (a.k.a. alerts, dialogs, etc.) then you need to know how to handle them in your Selenium tests.
+If your application triggers any JavaScript pop-ups (a.k.a. alerts, dialogs, etc.) then you need to know how to
+handle them in your Selenium tests.
 
-import DropdownMarkdown from '../../src/components/dropdownMarkdown';
+## A Solution
 
-<DropdownMarkdown folderName='51-how-to-work-with-javascript-alerts' />
+Built into Selenium is the ability to switch to an alert window and either accept or dismiss it. This way your
+tests can continue unencumbered by dialog boxes that may feel just out of reach.
+
+
+import DisplayTips from "../../src/components/displayTips";
+const contentLanguages = [
+    { label: 'Python', value: 'python' },
+    { label: 'C#', value: 'csharp' },
+    { label: 'Java', value: 'java' },
+    { label: 'JavaScript', value: 'javascript' },
+    { label: 'Ruby', value: 'ruby' },
+];
+
+<DisplayTips contentPath={"51-how-to-work-with-javascript-alerts"} languages={contentLanguages} />
+
+
+## About The Author
+
+Dave Haeffner is the original writer of Elemental Selenium -- a free, once weekly Selenium tip newsletter that's read
+by thousands of testing professionals. He also created and maintains the-internet (an open-source web app that's
+perfect for writing automated tests against).
+
+Dave has helped numerous companies successfully implement automated acceptance testing; including The Motley Fool,
+ManTech International, Sittercity, and Animoto. He is also an active member of the Selenium project and has spoken
+at numerous conferences and meetups around the world about automated acceptance testing.
+
+![Dave Haeffner profile picture](/img/authors/dave-haeffner.jpeg#author-img 'a title')
+
