Switching tip 55 to use tabs

--- a/frontend/tips/55-wrapper/main.mdx
+++ b/frontend/tips/55-wrapper/main.mdx
@@ -22,8 +22,29 @@ category:
 
 ## Intro
 
-There may come a time where you want to access Selenium logs in real time. Although there is a way to do this where you have to explicitly request the logs after each test action (fine for one-offs), what if we wanted information for **every** test action?
+There may come a time when you want to access Selenium logs in real time. Although there is a way to do this where
+you have to explicitly request the logs after each test action (fine for one-offs), what if we wanted information
+for **every** test action?
 
-import DropdownMarkdown from '../../src/components/dropdownMarkdown';
 
-<DropdownMarkdown folderName='55-wrapper' />
+import DisplayTips from "../../src/components/displayTips";
+const contentLanguages = [
+    { label: 'Ruby', value: 'ruby' },
+];
+
+<DisplayTips contentPath={"55-wrapper"} languages={contentLanguages} />
+
+
+## About The Author
+
+Dave Haeffner is the original writer of Elemental Selenium -- a free, once weekly Selenium tip newsletter that's read
+by thousands of testing professionals. He also created and maintains the-internet (an open-source web app that's
+perfect for writing automated tests against).
+
+Dave has helped numerous companies successfully implement automated acceptance testing; including The Motley Fool,
+ManTech International, Sittercity, and Animoto. He is also an active member of the Selenium project and has spoken
+at numerous conferences and meetups around the world about automated acceptance testing.
+
+![Dave Haeffner profile picture](/img/authors/dave-haeffner.jpeg#author-img 'a title')
+
+
