Switching tip 67 to use tabs

--- a/frontend/tips/67-broken-images/main.mdx
+++ b/frontend/tips/67-broken-images/main.mdx
@@ -27,8 +27,40 @@ category:
 
 Selenium is built to mimic human action (e.g., clicking, typing, dragging, dropping, etc.). So how do you use it to test for broken images?
 
-import DropdownMarkdown from '../../src/components/dropdownMarkdown';
+## A Solution
 
-<!-- Add the name of the folder -->
+Out of the box, Selenium is not equipped to handle this. But regardless, there are several ways to accomplish this.
 
-<DropdownMarkdown folderName='67-broken-images' />
+We can use...
+
++ a proxy server
++ an HTTP library
++ JavaScript
+
+Lets look at an example of each.
+
+
+
+import DisplayTips from "../../src/components/displayTips";
+const contentLanguages = [
+    { label: 'Ruby', value: 'ruby' },
+];
+
+<DisplayTips contentPath={"67-broken-images"} languages={contentLanguages} />
+
+
+## About The Author
+
+Dave Haeffner is the original writer of Elemental Selenium -- a free, once weekly Selenium tip newsletter that's read
+by thousands of testing professionals. He also created and maintains the-internet (an open-source web app that's
+perfect for writing automated tests against).
+
+Dave has helped numerous companies successfully implement automated acceptance testing; including The Motley Fool,
+ManTech International, Sittercity, and Animoto. He is also an active member of the Selenium project and has spoken
+at numerous conferences and meetups around the world about automated acceptance testing.
+
+![Dave Haeffner profile picture](/img/authors/dave-haeffner.jpeg#author-img 'a title')
+
+
+
+
