--- a/frontend/tips/67-broken-images/main.mdx
+++ b/frontend/tips/67-broken-images/main.mdx
@@ -25,7 +25,8 @@ category:
 
 ## Intro
 
-Selenium is built to mimic human action (e.g., clicking, typing, dragging, dropping, etc.). So how do you use it to test for broken images?
+Selenium is built to mimic human action (e.g., clicking, typing, dragging, dropping, etc.). So how do you use it to
+test for broken images?
 
 ## A Solution
 
